--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+teetime/node_modules
+teetime/.pnp
 .pnp.js
 .yarn/install-state.gz
 
 # testing
-/coverage
+teetime/coverage
 
 # next.js
-/.next/
-/out/
+teetime/.next/
+teetime/out/
 
 # production
-/build
+teetime/build
 
 # misc
 .DS_Store
@@ -35,5 +35,4 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-LocalPostgres
-LocalPostgres/StackBuilder_3rd_party_licenses.txt
+LocalPostgres/
