--- a/teetime/package.json
+++ b/teetime/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "next": "14.1.3",
     "pg": "^8.11.5",
     "react": "^18",
